@@ -466,10 +466,10 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
     case DOUBLE:
       return javaSizePrimitiveType;
     case STRING:
-      keyPositionsSize.add(new Integer(pos));
+      keyPositionsSize.add(Integer.valueOf(pos));
       return javaObjectOverHead;
     case BINARY:
-      keyPositionsSize.add(new Integer(pos));
+      keyPositionsSize.add(Integer.valueOf(pos));
       return javaObjectOverHead;
     case TIMESTAMP:
     case TIMESTAMPLOCALTZ:
@@ -500,8 +500,7 @@ public class GroupByOperator extends Operator<GroupByDesc> implements IConfigure
         || c.isInstance(Short.valueOf((short) 0))
         || c.isInstance(Integer.valueOf(0))
         || c.isInstance(Long.valueOf(0))
-        || c.isInstance(new Float(0))
-        || c.isInstance(new Double(0))) {
+        || c.isInstance(Float.valueOf(0)) || c.isInstance(Double.valueOf(0))) {
       return javaSizePrimitiveType;
     }
 
