@@ -140,7 +140,7 @@ public abstract class AbstractJoinTaskDispatcher implements Dispatcher {
             aliasTotalKnownInputSize += size;
             Long es = aliasToSize.get(alias);
             if (es == null) {
-              es = new Long(0);
+              es = Long.valueOf(0);
             }
             es += size;
             aliasToSize.put(alias, es);
