@@ -113,7 +113,6 @@ import org.apache.calcite.util.ImmutableBitSet;
 import org.apache.calcite.util.ImmutableIntList;
 import org.apache.calcite.util.Pair;
 import org.apache.hadoop.fs.Path;
-import org.apache.hadoop.hive.common.ObjectPair;
 import org.apache.hadoop.hive.conf.Constants;
 import org.apache.hadoop.hive.conf.HiveConf;
 import org.apache.hadoop.hive.conf.HiveConf.ConfVars;
@@ -149,7 +148,8 @@ import org.apache.hadoop.hive.ql.optimizer.calcite.HiveConfPlannerContext;
 import org.apache.hadoop.hive.ql.optimizer.calcite.HiveDefaultRelMetadataProvider;
 import org.apache.hadoop.hive.ql.optimizer.calcite.HivePlannerContext;
 import org.apache.hadoop.hive.ql.optimizer.calcite.HiveRelFactories;
-import org.apache.hadoop.hive.ql.optimizer.calcite.HiveRelOpMaterializationValidator;
+import org.apache.hadoop.hive.ql.optimizer.calcite.HiveRelOptMaterializationValidator;
+import org.apache.hadoop.hive.ql.optimizer.calcite.HiveRelOptUtil;
 import org.apache.hadoop.hive.ql.optimizer.calcite.HiveRexExecutorImpl;
 import org.apache.hadoop.hive.ql.optimizer.calcite.HiveTypeSystemImpl;
 import org.apache.hadoop.hive.ql.optimizer.calcite.RelOptHiveTable;
@@ -281,7 +281,6 @@ import org.joda.time.Interval;
 import java.io.IOException;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.UndeclaredThrowableException;
 import java.math.BigDecimal;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayDeque;
@@ -384,8 +383,10 @@ public class CalcitePlanner extends SemanticAnalyzer {
     if (cboCtx.type == PreCboCtx.Type.CTAS || cboCtx.type == PreCboCtx.Type.VIEW) {
       queryForCbo = cboCtx.nodeOfInterest; // nodeOfInterest is the query
     }
-    runCBO = canCBOHandleAst(queryForCbo, getQB(), cboCtx);
+    Pair<Boolean, String> pairCanCBOHandleReason = canCBOHandleAst(queryForCbo, getQB(), cboCtx);
+    runCBO = pairCanCBOHandleReason.left;
     if (!runCBO) {
+      ctx.setCboInfo("Plan not optimized by CBO because the statement " + pairCanCBOHandleReason.right);
       return null;
     }
     profilesCBO = obtainCBOProfiles(queryProperties);
@@ -448,7 +449,8 @@ public class CalcitePlanner extends SemanticAnalyzer {
       if (cboCtx.type == PreCboCtx.Type.CTAS || cboCtx.type == PreCboCtx.Type.VIEW) {
         queryForCbo = cboCtx.nodeOfInterest; // nodeOfInterest is the query
       }
-      runCBO = canCBOHandleAst(queryForCbo, getQB(), cboCtx);
+      Pair<Boolean, String> canCBOHandleReason = canCBOHandleAst(queryForCbo, getQB(), cboCtx);
+      runCBO = canCBOHandleReason.left;
       if (queryProperties.hasMultiDestQuery()) {
         handleMultiDestQuery(ast, cboCtx);
       }
@@ -529,10 +531,17 @@ public class CalcitePlanner extends SemanticAnalyzer {
             this.ctx.setCboInfo("Plan optimized by CBO.");
             this.ctx.setCboSucceeded(true);
             if (this.ctx.isExplainPlan()) {
+              // Enrich explain with information derived from CBO
               ExplainConfiguration explainConfig = this.ctx.getExplainConfig();
               if (explainConfig.isCbo()) {
-                if (explainConfig.isCboExtended()) {
-                  // Include join cost
+                if (!explainConfig.isCboJoinCost()) {
+                  // Include cost as provided by Calcite
+                  newPlan.getCluster().invalidateMetadataQuery();
+                  RelMetadataQuery.THREAD_PROVIDERS.set(JaninoRelMetadataProvider.of(DefaultRelMetadataProvider.INSTANCE));
+                }
+                if (explainConfig.isFormatted()) {
+                  this.ctx.setCalcitePlan(HiveRelOptUtil.toJsonString(newPlan));
+                } else if (explainConfig.isCboCost() || explainConfig.isCboJoinCost()) {
                   this.ctx.setCalcitePlan(RelOptUtil.toString(newPlan, SqlExplainLevel.ALL_ATTRIBUTES));
                 } else {
                   // Do not include join cost
@@ -609,7 +618,13 @@ public class CalcitePlanner extends SemanticAnalyzer {
           }
         }
       } else {
-        this.ctx.setCboInfo("Plan not optimized by CBO.");
+        String msg;
+        if (canCBOHandleReason.right != null) {
+          msg = "Plan not optimized by CBO because the statement " + canCBOHandleReason.right;
+        } else {
+          msg = "Plan not optimized by CBO.";
+        }
+        this.ctx.setCboInfo(msg);
         skipCalcitePlan = true;
       }
     }
@@ -812,7 +827,7 @@ public class CalcitePlanner extends SemanticAnalyzer {
    *         If top level QB is query then everything below it must also be
    *         Query.
    */
-  boolean canCBOHandleAst(ASTNode ast, QB qb, PreCboCtx cboCtx) {
+  Pair<Boolean, String> canCBOHandleAst(ASTNode ast, QB qb, PreCboCtx cboCtx) {
     int root = ast.getToken().getType();
     boolean needToLogMessage = STATIC_LOG.isInfoEnabled();
     boolean isSupportedRoot = root == HiveParser.TOK_QUERY || root == HiveParser.TOK_EXPLAIN
@@ -824,39 +839,39 @@ public class CalcitePlanner extends SemanticAnalyzer {
     boolean noBadTokens = HiveCalciteUtil.validateASTForUnsupportedTokens(ast);
     boolean result = isSupportedRoot && isSupportedType && noBadTokens;
 
+    String msg = "";
     if (!result) {
-      if (needToLogMessage) {
-        String msg = "";
-        if (!isSupportedRoot) {
-          msg += "doesn't have QUERY or EXPLAIN as root and not a CTAS; ";
-        }
-        if (!isSupportedType) {
-          msg += "is not a query with at least one source table "
-                  + " or there is a subquery without a source table, or CTAS, or insert; ";
-        }
-        if (!noBadTokens) {
-          msg += "has unsupported tokens; ";
-        }
-
-        if (msg.isEmpty()) {
-          msg += "has some unspecified limitations; ";
-        }
-        STATIC_LOG.info("Not invoking CBO because the statement "
-            + msg.substring(0, msg.length() - 2));
+      if (!isSupportedRoot) {
+        msg += "doesn't have QUERY or EXPLAIN as root and not a CTAS; ";
       }
-      return false;
+      if (!isSupportedType) {
+        msg += "is not a query with at least one source table "
+            + " or there is a subquery without a source table, or CTAS, or insert; ";
+      }
+      if (!noBadTokens) {
+        msg += "has unsupported tokens; ";
+      }
+      if (msg.isEmpty()) {
+        msg += "has some unspecified limitations; ";
+      }
+      msg = msg.substring(0, msg.length() - 2);
+      if (needToLogMessage) {
+        STATIC_LOG.info("Not invoking CBO because the statement " + msg);
+      }
+      return Pair.of(false, msg);
     }
+
     // Now check QB in more detail. canHandleQbForCbo returns null if query can
     // be handled.
-    String msg = CalcitePlanner.canHandleQbForCbo(queryProperties, conf, true, needToLogMessage, qb);
+    msg = CalcitePlanner.canHandleQbForCbo(queryProperties, conf, true, needToLogMessage, qb);
     if (msg == null) {
-      return true;
+      return Pair.of(true, msg);
     }
+    msg = msg.substring(0, msg.length() - 2);
     if (needToLogMessage) {
-      STATIC_LOG.info("Not invoking CBO because the statement "
-          + msg.substring(0, msg.length() - 2));
+      STATIC_LOG.info("Not invoking CBO because the statement " + msg);
     }
-    return false;
+    return Pair.of(false, msg);
   }
 
   /**
@@ -1646,8 +1661,7 @@ public class CalcitePlanner extends SemanticAnalyzer {
   }
 
   private boolean isUselessCause(Throwable t) {
-    return t instanceof RuntimeException || t instanceof InvocationTargetException
-        || t instanceof UndeclaredThrowableException;
+    return t instanceof RuntimeException || t instanceof InvocationTargetException;
   }
 
   private RowResolver genRowResolver(Operator op, QB qb) {
@@ -1741,16 +1755,6 @@ public class CalcitePlanner extends SemanticAnalyzer {
       }
       perfLogger.PerfLogEnd(this.getClass().getName(), PerfLogger.OPTIMIZER, "Calcite: Plan generation");
 
-      // Validate query materialization (materialized views, query results caching.
-      // This check needs to occur before constant folding, which may remove some
-      // function calls from the query plan.
-      HiveRelOpMaterializationValidator matValidator = new HiveRelOpMaterializationValidator();
-      matValidator.validateQueryMaterialization(calciteGenPlan);
-      if (!matValidator.isValidMaterialization()) {
-        String reason = matValidator.getInvalidMaterializationReason();
-        setInvalidQueryMaterializationReason(reason);
-      }
-
       // Create executor
       RexExecutor executorProvider = new HiveRexExecutorImpl(optCluster);
       calciteGenPlan.getCluster().getPlanner().setExecutor(executorProvider);
@@ -1775,6 +1779,20 @@ public class CalcitePlanner extends SemanticAnalyzer {
 
       calciteGenPlan = HiveRelDecorrelator.decorrelateQuery(calciteGenPlan);
       LOG.debug("Plan after decorrelation:\n" + RelOptUtil.toString(calciteGenPlan));
+
+      // Validate query materialization for query results caching. This check needs
+      // to occur before constant folding, which may remove some function calls
+      // from the query plan.
+      // In addition, if it is a materialized view creation and we are enabling it
+      // for rewriting, it should pass all checks done for query results caching
+      // and on top of that we should check that it only contains operators that
+      // are supported by the rewriting algorithm.
+      HiveRelOptMaterializationValidator materializationValidator = new HiveRelOptMaterializationValidator();
+      materializationValidator.validate(calciteGenPlan);
+      setInvalidResultCacheReason(
+          materializationValidator.getResultCacheInvalidReason());
+      setInvalidAutomaticRewritingMaterializationReason(
+          materializationValidator.getAutomaticRewritingInvalidReason());
 
       // 2. Apply pre-join order optimizations
       calcitePreCboPlan = applyPreJoinOrderingTransforms(calciteGenPlan,
@@ -1924,16 +1942,20 @@ public class CalcitePlanner extends SemanticAnalyzer {
       );
       perfLogger.PerfLogEnd(this.getClass().getName(), PerfLogger.OPTIMIZER, "Calcite: Druid transformation rules");
 
-      calciteOptimizedPlan = hepPlan(calciteOptimizedPlan, true, mdProvider.getMetadataProvider(), null,
-              HepMatchOrder.TOP_DOWN,
-              JDBCExtractJoinFilterRule.INSTANCE,
-              JDBCAbstractSplitFilterRule.SPLIT_FILTER_ABOVE_JOIN,
-              JDBCAbstractSplitFilterRule.SPLIT_FILTER_ABOVE_CONVERTER,
-              JDBCFilterJoinRule.INSTANCE,
-              JDBCJoinPushDownRule.INSTANCE, JDBCUnionPushDownRule.INSTANCE,
-              JDBCFilterPushDownRule.INSTANCE, JDBCProjectPushDownRule.INSTANCE,
-              JDBCAggregationPushDownRule.INSTANCE, JDBCSortPushDownRule.INSTANCE
-      );
+      if (conf.getBoolVar(ConfVars.HIVE_ENABLE_JDBC_PUSHDOWN)) {
+        perfLogger.PerfLogBegin(this.getClass().getName(), PerfLogger.OPTIMIZER);
+        calciteOptimizedPlan = hepPlan(calciteOptimizedPlan, true, mdProvider.getMetadataProvider(), null,
+            HepMatchOrder.TOP_DOWN,
+            JDBCExtractJoinFilterRule.INSTANCE,
+            JDBCAbstractSplitFilterRule.SPLIT_FILTER_ABOVE_JOIN,
+            JDBCAbstractSplitFilterRule.SPLIT_FILTER_ABOVE_CONVERTER,
+            JDBCFilterJoinRule.INSTANCE,
+            JDBCJoinPushDownRule.INSTANCE, JDBCUnionPushDownRule.INSTANCE,
+            JDBCFilterPushDownRule.INSTANCE, JDBCProjectPushDownRule.INSTANCE,
+            JDBCAggregationPushDownRule.INSTANCE, JDBCSortPushDownRule.INSTANCE
+        );
+        perfLogger.PerfLogEnd(this.getClass().getName(), PerfLogger.OPTIMIZER, "Calcite: JDBC transformation rules");
+      }
 
       // 11. Run rules to aid in translation from Calcite tree to Hive tree
       if (HiveConf.getBoolVar(conf, ConfVars.HIVE_CBO_RETPATH_HIVEOP)) {
@@ -3102,10 +3124,6 @@ public class CalcitePlanner extends SemanticAnalyzer {
 
         ASTNode subQueryAST = subQueries.get(i);
         //SubQueryUtils.rewriteParentQueryWhere(clonedSearchCond, subQueryAST);
-        Boolean orInSubquery = new Boolean(false);
-        Integer subqueryCount = new Integer(0);
-        ObjectPair<Boolean, Integer> subqInfo = new ObjectPair<Boolean, Integer>(false, 0);
-
         ASTNode outerQueryExpr = (ASTNode) subQueryAST.getChild(2);
 
         if (outerQueryExpr != null && outerQueryExpr.getType() == HiveParser.TOK_SUBQUERY_EXPR) {
@@ -3318,6 +3336,7 @@ public class CalcitePlanner extends SemanticAnalyzer {
             }
             String sbQueryAlias = "sq_" + qb.incrNumSubQueryPredicates();
             QB qbSQ = new QB(qb.getId(), sbQueryAlias, true);
+            qbSQ.setInsideView(qb.isInsideView());
             Phase1Ctx ctx1 = initPhase1Ctx();
             doPhase1((ASTNode) next.getChild(1), qbSQ, ctx1, null);
             getMetaData(qbSQ);
@@ -4154,7 +4173,7 @@ public class CalcitePlanner extends SemanticAnalyzer {
         SqlCall sc = null;
 
         if (amt != null)
-          amtLiteral = cluster.getRexBuilder().makeLiteral(new Integer(bs.getAmt()),
+          amtLiteral = cluster.getRexBuilder().makeLiteral(Integer.valueOf(bs.getAmt()),
               cluster.getTypeFactory().createSqlType(SqlTypeName.INTEGER), true);
 
         switch (bs.getDirection()) {
